# 2026-06-18-iphone-video-to-splat

./: .env  .gitignore  CLAUDE.md  PIPELINE.md  README.md  config.toml  gardenbed_sequential_comparison_report.md  launch_colmap.sh  launch_opensplat.sh  launch_opensplat_semantic.sh  loop_detection_full_fixed_loop_detection_report.md  loop_detection_full_loop_detection_report.md  main.py  matcher_comparison_comparison_report.md  pipeline.py  pipeline.sh  pyproject.toml  run_experiment.sh  run_loop_detection_experiment.sh  test_colmap.sh  test_loop_loop_detection_report.md  test_loss_parsing.py  test_pipeline.py  try_bash_colmap.sh  try_bash_opensplat.sh
archive/bash_script_approach/: launch_opensplat.sh  pipeline.sh
config/: baseline.yaml  config.yaml  hparam_sweep.yaml  hparam_sweep_colmap.yaml  more_gaussians.yaml  teensy.yaml
logs/: analysis_colmap_timing.txt  colmap_timings.jsonl  experiment_comparison_report.md  pipeline_timing_baseline.jsonl
notes/: FILE_MANIFEST.md  PIPELINE.md
opensplat/: CMakeLists.txt
recipes/: launch_pipeline.sh
reports/: FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md
scripts/: analyze_training_loss.py  parse_opensplat_logs.py  plot_training_loss.py  plot_training_metrics.py  train_gaussian_splat.py  train_sift_comparison.sh  visualize_colmap_feature_matches.py  visualize_colmap_features.py  visualize_feature_matches.py
src/: __init__.py  colmap_feature_extractor.py  colmap_feature_matcher.py  colmap_mapper.py  colmap_undistorter.py  experiment_tracker.py  frame_extractor.py  opensplat_trainer.py  timing_recorder.py
(+42 files in other folders)
